Use ruby tag for frequency disambiguation (#1211)

--- a/ext/mixed/display-templates.html
+++ b/ext/mixed/display-templates.html
@@ -57,11 +57,11 @@
 <!-- Frequency templates -->
 <template id="frequency-group-item-template"><li class="frequency-group-item"><div class="frequency-tag-list tag-list"></div><ul class="frequency-list"></ul></li></template>
 <template id="term-frequency-item-template" data-remove-whitespace-text="true"><li class="frequency-item" data-frequency-type="term">
-    <span class="frequency-disambiguation">
+    <ruby class="frequency-disambiguation">
         <span class="frequency-disambiguation-expression"></span>
         <span class="frequency-disambiguation-separator"></span>
-        <span class="frequency-disambiguation-reading"></span>
-    </span>
+        <rt class="frequency-disambiguation-reading"></rt>
+    </ruby>
     <span class="frequency-separator"></span>
     <span class="frequency-value"></span>
 </li></template>
