--- a/test/data/html/test-document1.html
+++ b/test/data/html/test-document1.html
@@ -46,6 +46,54 @@
     <div
         class="test"
         data-test-type="scan"
+        data-element-from-point-selector="span"
+        data-caret-range-from-point-selector="span"
+        data-start-node-selector="span"
+        data-start-offset="16"
+        data-end-node-selector="span"
+        data-end-offset="16"
+        data-result-type="TextSourceRange",
+        data-sentence-extent="100"
+        data-sentence="心配して「くださって」、ありがと「ございます」"
+    >
+        <span>真白「心配して「くださって」、ありがと「ございます」」</span>
+    </div>
+
+    <div
+        class="test"
+        data-test-type="scan"
+        data-element-from-point-selector="span"
+        data-caret-range-from-point-selector="span"
+        data-start-node-selector="span"
+        data-start-offset="4"
+        data-end-node-selector="span"
+        data-end-offset="4"
+        data-result-type="TextSourceRange",
+        data-sentence-extent="100"
+        data-sentence="ありがとございます。"
+    >
+        <span>ありがとございます。ありがとございます。</span>
+    </div>
+
+    <div
+        class="test"
+        data-test-type="scan"
+        data-element-from-point-selector="span"
+        data-caret-range-from-point-selector="span"
+        data-start-node-selector="span"
+        data-start-offset="14"
+        data-end-node-selector="span"
+        data-end-offset="14"
+        data-result-type="TextSourceRange",
+        data-sentence-extent="100"
+        data-sentence="ありがとございます。"
+    >
+        <span>ありがとございます。ありがとございます。</span>
+    </div>
+
+    <div
+        class="test"
+        data-test-type="scan"
         data-element-from-point-selector="input"
         data-caret-range-from-point-selector="input"
         data-start-node-selector="input"
