--- a/ext/bg/settings2.html
+++ b/ext/bg/settings2.html
@@ -31,6 +31,7 @@
             <a href="#!window"           class="outline-item"><span class="outline-item-left"><span class="outline-item-icon icon" data-icon="window"></span></span><span class="outline-item-label">Window</span></a>
             <a href="#!audio"            class="outline-item"><span class="outline-item-left"><span class="outline-item-icon icon" data-icon="speaker"></span></span><span class="outline-item-label">Audio</span></a>
             <a href="#!text-parsing"     class="outline-item"><span class="outline-item-left"><span class="outline-item-icon icon" data-icon="text-parsing"></span></span><span class="outline-item-label">Text Parsing</span></a>
+            <a href="#!sentence-parsing" class="outline-item advanced-only"><span class="outline-item-left"><span class="outline-item-icon icon" data-icon="sentence-parsing"></span></span><span class="outline-item-label">Sentence Parsing</span></a>
             <a href="#!translation"      class="outline-item"><span class="outline-item-left"><span class="outline-item-icon icon" data-icon="translation"></span></span><span class="outline-item-label">Translation</span></a>
             <a href="#!anki"             class="outline-item"><span class="outline-item-left"><span class="outline-item-icon icon" data-icon="note-card"></span></span><span class="outline-item-label">Anki</span></a>
             <a href="#!shortcuts"        class="outline-item"><span class="outline-item-left"><span class="outline-item-icon icon" data-icon="keyboard"></span></span><span class="outline-item-label">Shortcuts</span></a>
@@ -1107,6 +1108,48 @@
         </div></div>
     </div>
 
+    <!-- Text Parsing -->
+    <div class="advanced-only">
+        <div class="heading-container">
+            <div class="heading-container-icon"><span class="icon" data-icon="sentence-parsing"></span></div>
+            <div class="heading-container-left"><h2 id="sentence-parsing"><a href="#!sentence-parsing">Sentence Parsing</a></h2></div>
+            <div class="heading-container-right"><a class="more-toggle more-only heading-link-light" data-parent-distance="3">Info&hellip;</a></div>
+        </div>
+        <div class="heading-description more" hidden>
+            <p>
+                Yomichan can will scan and parse sentences which can be used as contextual information for Anki cards.
+            </p>
+            <p>
+                <a class="more-toggle" data-parent-distance="3">Less&hellip;</a>
+            </p>
+        </div>
+    </div>
+    <div class="settings-group advanced-only">
+        <div class="settings-item">
+            <div class="settings-item-inner settings-item-inner-wrappable">
+                <div class="settings-item-left">
+                    <div class="settings-item-label">
+                        Sentence scanning extent
+                        <a class="more-toggle more-only" data-parent-distance="4">(?)</a>
+                    </div>
+                </div>
+                <div class="settings-item-right">
+                    <input type="number" data-setting="sentenceParsing.scanExtent" min="0" step="1">
+                </div>
+            </div>
+            <div class="settings-item-children more" hidden>
+                <p>
+                    This option controls the maximum scanning distance used to determine the bounds of a sentence,
+                    in number of characters.
+                    Sentence scanning is bidirectional and begins from both the start and end of the source term.
+                </p>
+                <p>
+                    <a class="more-toggle" data-parent-distance="3">Less&hellip;</a>
+                </p>
+            </div>
+        </div>
+    </div>
+
     <!-- Translation -->
     <div>
         <div class="heading-container">
@@ -1389,29 +1432,6 @@
                 </div>
             </div>
         </div></div>
-        <div class="settings-item advanced-only">
-            <div class="settings-item-inner settings-item-inner-wrappable">
-                <div class="settings-item-left">
-                    <div class="settings-item-label">
-                        Sentence scanning extent
-                        <a class="more-toggle more-only" data-parent-distance="4">(?)</a>
-                    </div>
-                </div>
-                <div class="settings-item-right">
-                    <input type="number" data-setting="anki.sentenceExt" min="1" step="1">
-                </div>
-            </div>
-            <div class="settings-item-children more" hidden>
-                <p>
-                    This option controls the maximum scanning distance used to determine the bounds of a sentence,
-                    in number of characters.
-                    Sentence scanning is bidirectional and begins from both the start and end of the source term.
-                </p>
-                <p>
-                    <a class="more-toggle" data-parent-distance="3">Less&hellip;</a>
-                </p>
-            </div>
-        </div>
         <div class="settings-item settings-item-button" data-modal-action="show,anki-cards"><div class="settings-item-inner">
             <div class="settings-item-left">
                 <div class="settings-item-label">Configure Anki card format&hellip;</div>
