Refactor sentence parsing (#1215)
* Rename sentenceExtent with sentenceScanExtent

* Update TextScanner.setOptions

* Change function argument order

* Rename quote map variables

* Fix edge case quote handling

* Update terminator maps to support character inclusion

--- a/test/data/html/test-document1.html
+++ b/test/data/html/test-document1.html
@@ -21,7 +21,7 @@
         data-end-node-selector="span"
         data-end-offset="0"
         data-result-type="TextSourceRange",
-        data-sentence-extent="100"
+        data-sentence-scan-extent="100"
         data-sentence="真白「心配してくださって、ありがとございます」"
     >
         <span>真白「心配してくださって、ありがとございます」</span>
@@ -37,7 +37,7 @@
         data-end-node-selector="span"
         data-end-offset="5"
         data-result-type="TextSourceRange",
-        data-sentence-extent="100"
+        data-sentence-scan-extent="100"
         data-sentence="心配してくださって、ありがとございます"
     >
         <span>真白「心配してくださって、ありがとございます」</span>
@@ -53,7 +53,7 @@
         data-end-node-selector="span"
         data-end-offset="16"
         data-result-type="TextSourceRange",
-        data-sentence-extent="100"
+        data-sentence-scan-extent="100"
         data-sentence="心配して「くださって」、ありがと「ございます」"
     >
         <span>真白「心配して「くださって」、ありがと「ございます」」</span>
@@ -69,7 +69,7 @@
         data-end-node-selector="span"
         data-end-offset="4"
         data-result-type="TextSourceRange",
-        data-sentence-extent="100"
+        data-sentence-scan-extent="100"
         data-sentence="ありがとございます。"
     >
         <span>ありがとございます。ありがとございます。</span>
@@ -85,7 +85,7 @@
         data-end-node-selector="span"
         data-end-offset="14"
         data-result-type="TextSourceRange",
-        data-sentence-extent="100"
+        data-sentence-scan-extent="100"
         data-sentence="ありがとございます。"
     >
         <span>ありがとございます。ありがとございます。</span>
@@ -101,7 +101,7 @@
         data-end-node-selector="input"
         data-end-offset="0"
         data-result-type="TextSourceRange",
-        data-sentence-extent="100"
+        data-sentence-scan-extent="100"
         data-sentence="真白「心配してくださって、ありがとございます」"
         data-has-imposter="true"
     >
@@ -118,7 +118,7 @@
         data-end-node-selector="textarea"
         data-end-offset="0"
         data-result-type="TextSourceRange",
-        data-sentence-extent="100"
+        data-sentence-scan-extent="100"
         data-sentence="真白「心配してくださって、ありがとございます」"
         data-has-imposter="true"
     >
@@ -135,7 +135,7 @@
         data-end-node-selector="button"
         data-end-offset="0"
         data-result-type="TextSourceElement",
-        data-sentence-extent="100"
+        data-sentence-scan-extent="100"
         data-sentence="よみちゃん"
     >
         <button style="width: 100%; box-sizing: border-box; font-family: inherit; font-size: inherit; border: 1px solid #d8d8d8; background-color: #f0f0f0; padding: 0.2em;">よみちゃん</button>
@@ -151,7 +151,7 @@
         data-end-node-selector="img"
         data-end-offset="0"
         data-result-type="TextSourceElement"
-        data-sentence-extent="100"
+        data-sentence-scan-extent="100"
         data-sentence="よみちゃん"
     >
         <img src="data:image/gif;base64,R0lGODdhBwAHAIABAAAAAP///ywAAAAABwAHAAACDIRvEaC32FpCbEkKCgA7" alt="よみちゃん" title="よみちゃん" style="width: 70px; height: 70px; image-rendering: crisp-edges; image-rendering: pixelated; display: block;" />
