--- a/ext/bg/settings2.html
+++ b/ext/bg/settings2.html
@@ -1117,7 +1117,7 @@
         </div>
         <div class="heading-description more" hidden>
             <p>
-                Yomichan can will scan and parse sentences which can be used as contextual information for Anki cards.
+                Yomichan can scan and parse sentences which can be used as contextual information for Anki cards.
             </p>
             <p>
                 <a class="more-toggle" data-parent-distance="3">Less&hellip;</a>
