--- a/ext/fg/float.html
+++ b/ext/fg/float.html
@@ -63,7 +63,7 @@
             </div>
         </div>
     </div>
-    <div class="content-sidebar scrollbar" id="content-sidebar" hidden>
+    <div class="content-sidebar scrollbar" id="content-sidebar">
         <div class="content-sidebar-inner">
             <div class="content-sidebar-top-pre">
                 <button class="sidebar-button danger" id="close-button" title="Close popup"><span class="sidebar-button-icon" data-icon="cross"></span></button>
