--- a/ext/bg/template-renderer.html
+++ b/ext/bg/template-renderer.html
@@ -14,7 +14,9 @@
 </head>
 <body>
     <script src="/mixed/lib/handlebars.min.js"></script>
+    <script src="/mixed/js/dictionary-data-util.js"></script>
     <script src="/mixed/js/japanese.js"></script>
+    <script src="/bg/js/anki-note-data.js"></script>
     <script src="/bg/js/template-renderer.js"></script>
     <script src="/bg/js/template-renderer-frame-api.js"></script>
     <script src="/bg/js/template-renderer-frame-main.js"></script>
