Add reset input to profile condition (#1237)
* Add _setType and _setOperator

* Add reset value menu option

--- a/ext/bg/settings2.html
+++ b/ext/bg/settings2.html
@@ -1789,6 +1789,7 @@
 </div></div></template>
 
 <template id="profile-condition-menu-template"><div class="popup-menu-container" tabindex="-1" role="dialog"><div class="popup-menu">
+    <button class="popup-menu-item" data-menu-action="resetValue">Reset value</button>
     <button class="popup-menu-item" data-menu-action="delete">Delete</button>
 </div></div></template>
 
