--- a/ext/bg/welcome.html
+++ b/ext/bg/welcome.html
@@ -129,7 +129,7 @@
             <div class="settings-item-inner">
                 <div class="settings-item-left">
                     <div class="settings-item-label">Auto-hide search popup</div>
-                    <div class="settings-item-description">When no text or definitions are found, the popup will automatically hide.</div>
+                    <div class="settings-item-description">When no definitions are found after scanning text, the popup will automatically hide.</div>
                 </div>
                 <div class="settings-item-right">
                     <label class="toggle"><input type="checkbox" data-setting="scanning.autoHideResults"
@@ -155,7 +155,7 @@
         <div class="settings-item"><div class="settings-item-inner">
             <div class="settings-item-left">
                 <div class="settings-item-label">Scan delay <span class="light">(in milliseconds)</span></div>
-                <div class="settings-item-description">When no key or button is required for scanning, the delay before scanning occurs.</div>
+                <div class="settings-item-description">Change the delay before scanning occurs when no modifier key is required.</div>
             </div>
             <div class="settings-item-right">
                 <input type="number" data-setting="scanning.delay" min="0">
