Fix profile conditions issues (#1239)
* Add an event for when the number of profile conditions changes

* Update count

* Fix stale data being used

* Add "Remove group" option

--- a/ext/bg/settings2.html
+++ b/ext/bg/settings2.html
@@ -1792,6 +1792,7 @@
 <template id="profile-condition-menu-template"><div class="popup-menu-container" tabindex="-1" role="dialog"><div class="popup-menu">
     <button class="popup-menu-item" data-menu-action="resetValue">Reset value</button>
     <button class="popup-menu-item" data-menu-action="delete">Delete</button>
+    <button class="popup-menu-item" data-menu-action="deleteGroup">Delete group</button>
 </div></div></template>
 
 
