--- a/ext/bg/settings2.html
+++ b/ext/bg/settings2.html
@@ -1357,7 +1357,7 @@
             </div>
         </div></div>
         <div class="settings-item advanced-only">
-            <div class="settings-item-inner settings-item-inner-wrappable">
+            <div class="settings-item-inner">
                 <div class="settings-item-left">
                     <div class="settings-item-label">Check for card duplicates</div>
                     <div class="settings-item-description">When a card is detected as a duplicate, the add buttons will be disabled.</div>
@@ -1433,6 +1433,16 @@
                         </select>
                     </div>
                 </div>
+            </div>
+        </div></div>
+
+        <div class="settings-item advanced-only"><div class="settings-item-inner">
+            <div class="settings-item-left">
+                <div class="settings-item-label">Suspend new cards</div>
+                <div class="settings-item-description">New cards will be suspended when a note is added.</div>
+            </div>
+            <div class="settings-item-right">
+                <label class="toggle"><input type="checkbox" data-setting="anki.suspendNewCards"><span class="toggle-body"><span class="toggle-track"></span><span class="toggle-knob"></span></span></label>
             </div>
         </div></div>
         <div class="settings-item settings-item-button" data-modal-action="show,anki-cards"><div class="settings-item-inner">
