Separate close hotkey (#1242)
* Add focusSearchBox hotkey

* Update close hotkey action

* Update hotkeys

--- a/ext/bg/settings2.html
+++ b/ext/bg/settings2.html
@@ -2871,7 +2871,8 @@
     <div class="hotkey-list-item-action-cell">
         <select class="hotkey-list-item-action">
             <option value="">None</option>
-            <option value="close">Close popup</option>
+            <option value="close">Close</option>
+            <option value="focusSearchBox">Focus search box</option>
             <option value="nextEntry">Go to next entry</option>
             <option value="nextEntry3">Go to next entry (x3)</option>
             <option value="previousEntry">Go to previous entry</option>
